# rdma-ai-infra

./: .gitignore  CMakeLists.txt  README.md
common/include/: bench_utils.h  logging.h  timing.h
docs/: raw-verbs-evolution.md
phase1_verbs/: CMakeLists.txt
phase1_verbs/bench/: bw_rdma_write.c  lat_rdma_write.c  lat_send_recv.c
phase1_verbs/include/: rdma_common.h
phase1_verbs/src/: rdma_cm_connect.c  rdma_connect.c  rdma_context.c  rdma_mr.c  rdma_ops.c  rdma_qp.c
phase2_transport/: CMakeLists.txt
phase2_transport/bench/: backend_compare.cpp
phase2_transport/include/: rdma_backend.hpp  tcp_backend.hpp  transport.hpp
phase2_transport/src/: rdma_backend.cpp  tcp_backend.cpp
phase3_collective/: CMakeLists.txt
phase3_collective/bench/: allreduce_bench.cpp
phase3_collective/include/: collective.hpp
phase3_collective/src/: ring_allreduce.cpp  world.cpp
phase4_kv_cache/: CMakeLists.txt
phase4_kv_cache/bench/: kv_bench.cpp
phase4_kv_cache/include/: kv_cache.hpp
phase4_kv_cache/src/: kv_server.cpp
phase4b_kv_cache/bench/: kv_bench.cpp
phase4b_kv_cache/include/: kv_cache.hpp
phase4b_kv_cache/src/: kv_server.cpp
phase5_vllm/: CMakeLists.txt  pyproject.toml
phase5_vllm/bindings/: transport_py.cpp
phase5_vllm/examples/: client.py  server.py  tensor_client.py  tensor_server.py  test_torch.py
phase5_vllm/python/rai_rdma/: __init__.py  _core.pyi
scripts/: setup.sh
